// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile should match the snapshot when the user does not have a profile picture 1`] = `
<Component
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
          "paddingBottom": "3%",
          "paddingTop": "20%",
        }
      }
    >
      WELCOME, 
      USER 1
      !
    </Component>
    <Themed.Icon
      color="white"
      name="id-card"
      size={40}
      type="font-awesome"
    />
  </ImageBackground>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 0.8,
        "justifyContent": "space-around",
      }
    }
  >
    <Themed.Icon
      color="#3c4859"
      name="portrait"
      size={150}
      type="badge"
    />
  </TouchableOpacity>
  <Component
    style={
      Object {
        "display": "flex",
        "flex": 2,
        "flexDirection": "column",
        "flexWrap": "wrap",
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#f44336"
        name="diamond"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        30
         gems
      </Component>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#009688"
        name="university"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        3
         landmarks visited
      </Component>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#9c27b0"
        name="flag-checkered"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        Recent landmark: 
        Coors Field
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`UserProfile should match the snapshot when the user has a profile picture 1`] = `
<Component
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <ImageBackground
    source={1}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 18,
          "fontWeight": "600",
          "paddingBottom": "3%",
          "paddingTop": "20%",
        }
      }
    >
      WELCOME, 
      USER 1
      !
    </Component>
    <Themed.Icon
      color="white"
      name="id-card"
      size={40}
      type="font-awesome"
    />
  </ImageBackground>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 0.8,
        "justifyContent": "space-around",
      }
    }
  >
    <Component
      style={
        Object {
          "width": "65%",
        }
      }
    >
      <Component
        source={
          Object {
            "uri": "stringURL",
          }
        }
        style={
          Object {
            "height": "90%",
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
    </Component>
  </TouchableOpacity>
  <Component
    style={
      Object {
        "display": "flex",
        "flex": 2,
        "flexDirection": "column",
        "flexWrap": "wrap",
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#f44336"
        name="diamond"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        30
         gems
      </Component>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#009688"
        name="university"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        3
         landmarks visited
      </Component>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": "6%",
          "marginRight": "6%",
        }
      }
    >
      <Themed.Icon
        color="#9c27b0"
        name="flag-checkered"
        size={20}
        type="font-awesome"
      />
      <Component
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        Recent landmark: 
        Coors Field
      </Component>
    </Component>
  </Component>
</Component>
`;
